feat: add USER_LIST_ALL permission and fix production issues
- Add USER_LIST_ALL permission for system-wide user listing
- Create migration V30 to add permission and assign to SYSTEM_ADMIN role
- Update UserController to use feature-based permission
- Fix category tree default to show hierarchical structure by default
- Add productId validation in sales service to prevent null product errors
- Update permission matrix (CSV, MD, AsciiDoc)
- Fix UserControllerTest to create database users with proper roles
- Update WithMockPermissionsSecurityContextFactory with USER_LIST_ALL

All 294 tests passing.